--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,18 @@
       <version>1.0.3</version>
       <scope>provided</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.solr/solr-core -->
+    <dependency>
+      <groupId>org.apache.solr</groupId>
+      <artifactId>solr-core</artifactId>
+      <version>7.5.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.solr</groupId>
+      <artifactId>solr-core</artifactId>
+      <version>7.5.0</version>
+      <classifier>sources</classifier>
+    </dependency>
   </dependencies>
 
   <build>
@@ -51,6 +63,17 @@
         <version>1.0.4</version>
       </extension>
     </extensions>
+    
+    <resources>
+        <resource>
+            <directory>src/main/java</directory>
+            <filtering>false</filtering>
+        </resource>
+        <resource>
+            <directory>src/main/resources</directory>
+            <filtering>false</filtering>
+        </resource>
+    </resources>
 
     <plugins>
       <plugin>
@@ -66,6 +89,9 @@
           <compilerArgs>
             <arg>-parameters</arg>
           </compilerArgs>
+          <!-- Necessary in order for the debug levels to be considered-->
+          <debug>true</debug> 
+          <debugLevel>lines,vars,source</debugLevel>
         </configuration>
       </plugin>
       <plugin>
