--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
     <maven.surefire.plugin.version>2.19.1</maven.surefire.plugin.version>
     <johnzon.version>1.1.9</johnzon.version>
     <zip4j.version>1.3.2</zip4j.version>
+    <jacoco.version>0.8.2</jacoco.version>
   </properties>
 
   <dependencies>
@@ -181,6 +182,20 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>${jacoco.version}</version>
+        <executions>
+          <execution>
+            <id>prepare-agent</id>
+            <goals>
+                <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+        </executions>
+    </plugin>
     </plugins>
   </build>
 </project>
