--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: java
 jdk:
-  - oraclejdk8
   - oraclejdk10
-  - openjdk10
-  - openjdk11
+
 sudo: false
 script: mvn clean verify
+
+after_success:
+  - mvn clean test jacoco:report coveralls:report
