--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
     <johnzon.version>1.1.9</johnzon.version>
     <zip4j.version>1.3.2</zip4j.version>
     <jacoco.version>0.8.2</jacoco.version>
+    <coveralls.maven.plugin.version>4.3.0</coveralls.maven.plugin.version>
   </properties>
 
   <dependencies>
@@ -195,6 +196,15 @@
             </goals>
           </execution>
         </executions>
+    </plugin>
+
+    <plugin>
+    <groupId>org.eluder.coveralls</groupId>
+    <artifactId>coveralls-maven-plugin</artifactId>
+    <version>${coveralls.maven.plugin.version}</version>
+    <configuration>
+        <repoToken>yourcoverallsprojectrepositorytoken</repoToken>
+    </configuration>
     </plugin>
     </plugins>
   </build>
